--- a/app/src/main/res/layout/jhj_custom_dialog.xml
+++ b/app/src/main/res/layout/jhj_custom_dialog.xml
@@ -8,17 +8,37 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="이메일 본인확인"
+            android:text="삭제하시겠습니까?"
             android:textSize="35dp"
             android:textStyle="bold"
             android:gravity="center"
             />
 
-        <EditText
-            android:id="@+id/Custom_btn_email"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="20dp"
-                />
+            android:id="@+id/jhj_Custom_Dialog_Name"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/jhj_Custom_Dialog_Date"
+            />
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/jhj_Custom_Dialog_Delete"
+            android:text="삭제"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/jhj_Custom_Dialog_Cancle"
+            android:text="닫기"
+            />
+
 </LinearLayout>
